# bmi-example-c-grpc4bmi

./: Dockerfile  README.md
.github/workflows/: release.yml  test.yml
examples/: README.md  run-model-through-grpc4bmi.ipynb  run-model-through-grpc4bmi.py
images/conda-base/: Dockerfile  README.md
images/conda-base/server/: CMakeLists.txt
images/source-base/: Dockerfile  README.md
images/source-base/server/: CMakeLists.txt  heatc-grpc4bmi-server.cxx
server/: CMakeLists.txt  heatc-grpc4bmi-server.c
